delete cart icon + fixing of some margin to align items

--- a/src/app/components/courses-components/courses-head-toolbar/courses-head-toolbar/courses-head-toolbar.component.css
+++ b/src/app/components/courses-components/courses-head-toolbar/courses-head-toolbar/courses-head-toolbar.component.css
@@ -1,9 +1,8 @@
+
 div{
-    padding: 5px 10px;
+    padding: 5px 0 5px 9px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-#right-head-toolBar > *{
-    padding: 0px 5px;
-}
