--- a/src/app/components/courses-components/courses-list/courses-list/courses-list.component.css
+++ b/src/app/components/courses-components/courses-list/courses-list/courses-list.component.css
@@ -1,8 +1,4 @@
-div{
-    padding-right: 5px;
-}
 .course-name *{
     display: inline-block;
     vertical-align: middle; 
-    margin-right: 10px; 
 }
